@@ -20,9 +20,8 @@ enum {
 	HX_REALPATH_ABSOLUTE = 1 << 0,
 	HX_REALPATH_SELF     = 1 << 1,
 	HX_REALPATH_PARENT   = 1 << 2,
-	HX_REALPATH_SYMLINK  = 1 << 3,
-	HX_REALPATH_DEFAULT  =
-		HX_REALPATH_SELF | HX_REALPATH_PARENT | HX_REALPATH_SYMLINK,
+	/* HX_REALPATH_SYMLINK  = 1 << 3, removed in v3.13, thus blocked */
+	HX_REALPATH_DEFAULT  = HX_REALPATH_SELF | HX_REALPATH_PARENT,
 };
 
 struct HXdir;
